--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gatsby": "^2.7.1",
     "gatsby-image": "^2.1.1",
     "gatsby-plugin-emotion": "^4.0.7",
-    "gatsby-plugin-google-fonts": "1.0.1",
+    "gatsby-plugin-google-fonts": "^1.0.0",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-netlify-cms": "^4.1.33",
     "gatsby-plugin-offline": "^2.1.1",
