--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "version": "0.1.0",
   "author": "bgoonz <https://github.com/bgoonz>",
   "dependencies": {
-
     "@emotion/core": "^10.0.10",
-    "bootstrap": "4.6.1",
+    "bootstrap": "^4.3.1",
     "emotion": "^10.0.9",
     "gatsby": "^2.7.1",
     "gatsby-image": "^2.1.1",
@@ -25,8 +24,8 @@
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
     "lodash": "^4.17.11",
-    "netlify-cms-app": "2.15.59",
-    "prismjs": "^1.23.0",
+    "netlify-cms-app": "^2.10.1",
+    "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
@@ -34,10 +33,9 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0"
-
   },
   "devDependencies": {
-    "prettier": "1.17.1"
+    "prettier": "^1.17.1"
   },
   "keywords": [
     "gatsby"
