--- a/package.json
+++ b/package.json
@@ -5,39 +5,37 @@
   "version": "0.1.0",
   "author": "bgoonz <https://github.com/bgoonz>",
   "dependencies": {
-    "@emotion/core": "10.3.1",
-    "bootstrap": "4.3.1",
-
-    "emotion": "10.0.9",
-    "gatsby": "4.4.0",
-    "gatsby-image": "3.11.0",
-    "gatsby-plugin-emotion": "7.4.0",
-    "gatsby-plugin-google-fonts": "1.0.0",
-    "gatsby-plugin-manifest": "4.4.0",
-    "gatsby-plugin-netlify-cms": "6.4.0",
-    "gatsby-plugin-offline": "5.4.0",
-    "gatsby-plugin-react-helmet": "5.4.0",
-    "gatsby-plugin-sharp": "4.4.0",
-    "gatsby-remark-images": "6.4.0",
-    "gatsby-remark-prismjs": "6.4.0",
-    "gatsby-remark-responsive-iframe": "5.4.0",
-    "gatsby-source-filesystem": "4.4.0",
-    "gatsby-transformer-remark": "5.4.0",
-    "gatsby-transformer-sharp": "4.4.0",
-    "lodash": "4.17.11",
-    "netlify-cms-app": "2.10.1",
-    "prismjs": "1.16.0",
-    "prop-types": "15.7.2",
-    "react": "16.8.6",
-    "react-bootstrap": "1.0.0-beta.8",
-    "react-custom-share": "0.4.8",
-    "react-dom": "16.8.6",
-    "react-helmet": "5.2.1",
-    "react-icons": "3.7.0"
+    "@emotion/core": "^10.0.10",
+    "bootstrap": "^4.3.1",
+    "emotion": "^10.0.9",
+    "gatsby": "^2.7.1",
+    "gatsby-image": "^2.1.1",
+    "gatsby-plugin-emotion": "^4.0.7",
+    "gatsby-plugin-google-fonts": "^1.0.0",
+    "gatsby-plugin-manifest": "^2.1.1",
+    "gatsby-plugin-netlify-cms": "^4.1.33",
+    "gatsby-plugin-offline": "^2.1.1",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.1.1",
+    "gatsby-remark-images": "^3.1.34",
+    "gatsby-remark-prismjs": "^3.2.9",
+    "gatsby-remark-responsive-iframe": "^2.1.1",
+    "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-transformer-remark": "^2.3.12",
+    "gatsby-transformer-sharp": "^2.1.19",
+    "lodash": "^4.17.11",
+    "netlify-cms-app": "^2.10.1",
+    "prismjs": "^1.16.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-custom-share": "^0.4.8",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0"
   },
   "devDependencies": {
-    "prettier": "2.5.1"
-
+    "prettier": "^1.17.1"
   },
   "keywords": [
     "gatsby"
